--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0021)http://k180.lvweb.cn/ -->
 <html lang="zh-CN">
 
 <head>
@@ -29,7 +28,6 @@
 	<link href="./css/animate.min.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript" src="./js/wow.min.js"></script>
 	<!--<![endif]-->
-
 </head>
 
 <body>
@@ -160,7 +158,7 @@
 				<div class="container">
 					<h3>主营产品</h3>
 					<ul>
-						<li><a href="http://k180.lvweb.cn/Products1/"
+						<li><a href="./productList.html"
 								title="深圳市科创恒电子科技有限公司是一家专业从事气体检测仪,智慧环保,物联网领域的传感器应用及方案解决商！">深圳市科创恒电子科技有限公司是一家专业从事气体检测仪,智慧环保,物联网领域的传感器应用及方案解决商！</a>
 						</li>
 					</ul>
@@ -184,13 +182,13 @@
 							<ul style="display: table-cell; vertical-align: top; width: 1120px;">
 								<li>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/16.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/K2.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/15.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/K3.jpg"></div>
 											<div class="pro_title">固定式可燃气体检测仪 </div>
 										</a>
@@ -198,13 +196,13 @@
 								</li>
 								<li>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/14.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/Product01.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/13.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/Product03.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
@@ -212,13 +210,13 @@
 								</li>
 								<li>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/12.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/Product04.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/11.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/K2.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
@@ -226,13 +224,13 @@
 								</li>
 								<li>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/10.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/K3.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/9.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/Product01.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
@@ -242,13 +240,13 @@
 							<ul style="display: table-cell; vertical-align: top; width: 1120px;">
 								<li>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/8.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/Product03.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/7.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/Product04.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
@@ -256,13 +254,13 @@
 								</li>
 								<li>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/6.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/K2.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/5.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/K3.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
@@ -270,13 +268,13 @@
 								</li>
 								<li>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/4.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/Product01.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/3.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/Product03.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
@@ -284,13 +282,13 @@
 								</li>
 								<li>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/2.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/Product04.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
 									<div class="pro_item">
-										<a href="http://k180.lvweb.cn/Products1/1.html">
+										<a href="./productDetail.html">
 											<div class="pro_img"><img src="./images/K2.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
