--- a/marketAnalysis.html
+++ b/marketAnalysis.html
@@ -194,10 +194,8 @@
   <!--内容区结束-->
   <div class="clear"></div>
   </a>
-  <div id="footer" class="wow fadeInUp" style="visibility: hidden; animation-name: none;"><a
-      href="http://k180.lvweb.cn/news/1.html">
-    </a>
-    <div class="container"><a href="http://k180.lvweb.cn/news/1.html">
+  <div id="footer" class="wow fadeInUp" style="visibility: hidden; animation-name: none;">
+    <div class="container">
 
       </a>
       <div class="col-md-12 footer_list">
