--- a/productDetail.html
+++ b/productDetail.html
@@ -100,14 +100,13 @@
       <div id="left">
         <div class="left_list">
           <div class="left_top">
-            <h3>产品类目</h3>
+            <h3>产品分类</h3>
             <!-- <h4></h4> -->
           </div>
           <div class="left_con">
             <div class="type_list">
               <ul>
-                <li class="first_cat"><a class="current" href="http://k180.lvweb.cn/Products1/babianfengdai.html"
-                    title="八边封袋案例">八边封袋案例</a></li>
+                <li class="first_cat"><a class="current" href="./productList.html" title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></li>
               </ul>
             </div>
           </div>
@@ -142,53 +141,161 @@
       </div>
       <div id="right">
         <div id="right_top">
-          <h3>八边封袋案例</h3>
+          <h3>泵吸式可燃气体检测仪</h3>
           <span>
             <li>当前位置：</li>
-            <li><a href="http://k180.lvweb.cn/">首页</a></li>
+            <li><a href="./index.html">首页</a></li>
             <li>&gt;</li>
-            <li><a href="http://k180.lvweb.cn/Products1/index.html">产品类目</a></li>
+            <li><a href="./productList.html">产品类目</a></li>
             <li>&gt;</li>
-            <li><a href="http://k180.lvweb.cn/Products1/babianfengdai.html">八边封袋案例</a></li>
+            <li><a href="./productDetail.html">泵吸式可燃气体检测仪</a></li>
           </span>
         </div>
         <div id="right_con">
-          <div class="productTitle">八边封包装袋</div>
-          <div class="productImg"><a class="image-popup" rel="prettyPhoto"
-              href="./八边封包装袋-八边封袋案例-广州力洋包装有限公司_files/20170503105652336.jpg" title="八边封包装袋" target="_blank"><img
-                src="./八边封包装袋-八边封袋案例-广州力洋包装有限公司_files/20170503105652336.jpg" alt="八边封包装袋"></a></div>
+          <div class="productTitle">泵吸式可燃气体检测仪</div>
+          <div class="productImg">
+            <a class="image-popup" rel="prettyPhoto" href="./images/K3.jpg" title="泵吸式可燃气体检测仪" target="_blank"> <img
+                src="./images/K3.jpg" alt="泵吸式可燃气体检测仪"></a>
+          </div>
           <div class="productBuy"></div>
-          <div class="title"><span>详细信息</span></div>
+          <div class="title"><span>
+
+              <div class="news_content">一<strong>、产品描述</strong><strong>:</strong><br>
+                <table>
+                  <tbody>
+                    <tr>
+                      <td>
+                        HCK-200-C2H2乙炔检测仪，是一款连续检测乙炔气体浓度的本质安全型设备，仪器采用进口世界著名传感器厂商的传感器和微控制器技术，响应速度快，测量精度高，稳定性和重复性好，整机性能居国内领先水平，体积小、重量轻、携带方便，各项参数用户可自定义设置，操作简单。广泛应用于石油化工、工业生产、烟气尾气环境监测、污水治理、生物制药、家居环保、学校实验室等领域。<br>
+                        &nbsp;<br> <strong>二、产品特色：</strong><br> 1、采用原装进口高精度传感器<br>
+                        2、采用最新半导体纳米工艺超低功耗32位微处理器，24位ADC数据采集芯片<br> 3、液晶点阵显示技术，可显示气体种类，气体单位，气体浓度值<br>
+                        4、内置微型采样泵，可主动吸气检测<br> 5、全软件校准，更可靠保证测量的准确性和线性，并且具有数据恢复功能<br> 6、全中文操作菜单，简单实用，<br>
+                        7、一键恢复出厂设置功能，可免去误操作的困扰<br> 8、两级声光报警，报警点可自行设置<br> 9、大容量锂聚合物充电电池，超长待机<br>
+                        10、外壳采用高强度特殊工程塑料，防滑，防水，防尘，防爆<br> &nbsp;<br> &nbsp;</td>
+                      
+                    </tr>
+                  </tbody>
+                </table> <strong>三、技术参数：</strong><br>
+                <table border="1" cellpadding="0" cellspacing="0" style="width: 600px" width="600">
+                  <tbody>
+                    <tr>
+                      <td style="width: 98px"> 检测气体：</td>
+                      <td colspan="3"> 乙炔&nbsp;C2H2&nbsp;（电化学传感器，使用寿命3年）</td>
+                    </tr>
+                    <tr>
+                      <td> 出来范围：</td>
+                      <td colspan="3"> 0-100%LEL、1000ppm、5000ppm、20000ppm可选</td>
+                    </tr>
+                    <tr>
+                      <td> 分 辨 率：</td>
+                      <td colspan="3"> 0.01ppm（0-100ppm）；0.1ppm（0-1000ppm）；1ppm（1000ppm以上）</td>
+                    </tr>
+                    <tr>
+                      <td> 检测精度：</td>
+                      <td colspan="3"> ≤±3%（实际浓度，更高精度视具体传感器而定）</td>
+                    </tr>
+                    <tr>
+                      <td> 重 复 性：</td>
+                      <td style="width: 202px"> ≤±1%</td>
+                      <td style="width: 85px"> 响应时间：</td>
+                      <td style="width: 205px"> ≤20秒（T90）</td>
+                    </tr>
+                    <tr>
+                      <td> 线性误差：</td>
+                      <td> ≤±1%</td>
+                      <td> 恢复时间：</td>
+                      <td> ≤20秒</td>
+                    </tr>
+                    <tr>
+                      <td> 检测原理：</td>
+                      <td> 电化学原理</td>
+                      <td> 零点漂移：</td>
+                      <td> ≤±1%（F.S/年）</td>
+                    </tr>
+                    <tr>
+                      <td> 显示方式：</td>
+                      <td> LCD 液晶背光显示</td>
+                      <td> 报警方式：</td>
+                      <td> 声光二级报警，≤80分贝</td>
+                    </tr>
+                    <tr>
+                      <td> 检测方式：</td>
+                      <td colspan="3"> 泵吸式，自动抽气实时检测，测量结果更准确快速</td>
+                    </tr>
+                    <tr>
+                      <td> 数据恢复：</td>
+                      <td colspan="3"> 一键恢复出厂默认设置，方便快捷，不用担心误操作</td>
+                    </tr>
+                    <tr>
+                      <td> 自动诊断：</td>
+                      <td colspan="3"> 系统检查：电池电量，显示，传感器，硬件故障</td>
+                    </tr>
+                    <tr>
+                      <td> 防护等级：</td>
+                      <td> IP65</td>
+                      <td> 工作温度：</td>
+                      <td> -30℃～+70℃</td>
+                    </tr>
+                    <tr>
+                      <td> 防爆等级：</td>
+                      <td> Exia II CT6 （本安型）</td>
+                      <td> 工作湿度：</td>
+                      <td> ≤95%RH无冷凝</td>
+                    </tr>
+                    <tr>
+                      <td> 尺　　寸：</td>
+                      <td> 134×61×32mm（L×W×H）</td>
+                      <td> 工作压力：</td>
+                      <td> ≤100Kpa</td>
+                    </tr>
+                    <tr>
+                      <td> 重　　量：</td>
+                      <td> 300g</td>
+                      <td> 工作电源：</td>
+                      <td> 2800mA 可充电锂电池</td>
+                    </tr>
+                    <tr>
+                      <td> 相关配件：</td>
+                      <td colspan="3"> 包装盒、说明书、充电器、专用皮套（选配）</td>
+                    </tr>
+                  </tbody>
+                </table>
+                <div style="clear: both"> &nbsp;</div> &nbsp;<br>
+                <div></div>
+              </div>
+
+
+
+            </span></div>
           <div class="productDesc"></div>
-          <div class="pageUpDown clear">上一页：<a href="http://k180.lvweb.cn/Products1/17.html">八边封包装袋</a><br>
-            下一页：<a href="http://k180.lvweb.cn/Products1/15.html">八边封包装袋</a></div>
+          <div class="pageUpDown clear">上一页：<a href="./productDetail.html">泵吸式可燃气体检测仪</a><br>
+            下一页：<a href="./productDetail.html">泵吸式可燃气体检测仪</a></div>
           <div class="title"><span>相关产品</span></div>
           <div class="blank"></div>
           <div class="row">
             <div class="productList">
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".2s"
                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/26.html" title="八边封包装袋"><img
-                      src="./八边封包装袋-八边封袋案例-广州力洋包装有限公司_files/20170516174523463.JPG" alt="八边封包装袋"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/26.html" title="八边封包装袋">八边封包装袋</a></div>
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img src="./images/K2.jpg"
+                      alt="泵吸式可燃气体检测仪"></a></div>
+                <div class="pro_title"><a href="./productDetail.html" title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".4s"
                 style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/44.html" title="八边封包装袋"><img
-                      src="./八边封包装袋-八边封袋案例-广州力洋包装有限公司_files/20170516174647510.JPG" alt="八边封包装袋"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/44.html" title="八边封包装袋">八边封包装袋</a></div>
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img src="./images/K3.jpg"
+                      alt="泵吸式可燃气体检测仪"></a></div>
+                <div class="pro_title"><a href="./productDetail.html" title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".6s"
                 style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/70.html" title="八边封包装袋"><img
-                      src="./八边封包装袋-八边封袋案例-广州力洋包装有限公司_files/20170516174800673.JPG" alt="八边封包装袋"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/70.html" title="八边封包装袋">八边封包装袋</a></div>
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img src="./images/Product01.jpg"
+                      alt="泵吸式可燃气体检测仪"></a></div>
+                <div class="pro_title"><a href="./productDetail.html" title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".8s"
                 style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/9.html" title="八边封包装袋"><img
-                      src="./八边封包装袋-八边封袋案例-广州力洋包装有限公司_files/20170503105651757.jpg" alt="八边封包装袋"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/9.html" title="八边封包装袋">八边封包装袋</a></div>
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img src="./images/Product03.jpg"
+                      alt="泵吸式可燃气体检测仪"></a></div>
+                <div class="pro_title"><a href="./productDetail.html" title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
             </div>
           </div>
