--- a/hotProduct.html
+++ b/hotProduct.html
@@ -189,103 +189,103 @@
             <div class="productList">
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".2s"
                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/176.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/K2.jpg" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/176.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".4s"
                 style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/175.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/K3.jpg" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/175.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".6s"
                 style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/174.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product01.jpg" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/174.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".8s"
                 style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/173.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product03.jpg" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/173.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".2s"
                 style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/172.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product04.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/172.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".4s"
                 style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/171.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/k2.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/171.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".6s"
                 style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/170.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/k3.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/170.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".8s"
                 style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/169.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product01.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/169.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".2s"
                 style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/168.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product03.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/168.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".4s"
                 style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/167.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product04.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/167.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".6s"
                 style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/166.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/k2.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/166.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".8s"
                 style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/165.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/k3.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/165.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
             </div>
             <div class="blank clear"></div>
             <div class="pages">
-              <li class="active"><a href="http://k180.lvweb.cn/Products1/index.html">1</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_2.html">2</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_3.html">3</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_4.html">4</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_5.html">5</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_6.html">6</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_7.html">7</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_8.html">8</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_9.html">9</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_10.html">10</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_2.html">下一页</a></li>
-              <li><a href="http://k180.lvweb.cn/Products1/index_15.html">尾页</a></li>
+              <li class="active"><a href="./productCategory.html">1</a></li>
+              <li><a href="./productCategory.html">2</a></li>
+              <li><a href="./productCategory.html">3</a></li>
+              <li><a href="./productCategory.html">4</a></li>
+              <li><a href="./productCategory.html">5</a></li>
+              <li><a href="./productCategory.html">6</a></li>
+              <li><a href="./productCategory.html">7</a></li>
+              <li><a href="./productCategory.html">8</a></li>
+              <li><a href="./productCategory.html">9</a></li>
+              <li><a href="./productCategory.html">10</a></li>
+              <li><a href="./productCategory.html">下一页</a></li>
+              <li><a href="./productCategory.html">尾页</a></li>
             </div>
           </div>
         </div>
