--- a/news.html
+++ b/news.html
@@ -274,9 +274,7 @@
   </div>
   <!--内容区结束-->
   <div class="clear"></div>
-  <div id="footer" class="wow fadeInUp" style="visibility: hidden; animation-name: none;"><a
-      href="http://k180.lvweb.cn/news/1.html">
-    </a>
+  <div id="footer" class="wow fadeInUp" style="visibility: hidden; animation-name: none;">
     <div class="container">
       <div class="col-md-12 footer_list">
         <ul>
