--- a/newsDetail.html
+++ b/newsDetail.html
@@ -139,7 +139,7 @@
           <h3>甲醛中毒症状怎么办?</h3>
           <span>
             <li>当前位置：</li>
-            <li><a href="http://k180.lvweb.cn/">首页</a></li>
+            <li><a href="./index.html">首页</a></li>
             <li>&gt;</li>
             <li><a href="./newsDetail.html">甲醛中毒症状怎么办?</a></li>
           </span>
