--- a/productList.html
+++ b/productList.html
@@ -189,8 +189,10 @@
             <div class="productList">
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".2s"
                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img src="./images/K2.jpg"
-                      alt="泵吸式可燃气体检测仪"></a></div>
+                <div class="pro_img">
+                  <a href="./productDetail.html" title="泵吸式可燃气体检测仪">
+                    <img src="./images/K2.jpg" alt="泵吸式可燃气体检测仪"></a>
+                </div>
                 <div class="pro_title"><a href="./productDetail.html" title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".4s"
@@ -201,72 +203,72 @@
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".6s"
                 style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/174.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product01.jpg" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/174.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp animated" data-wow-delay=".8s"
                 style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/173.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product03.jpg" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/173.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".2s"
                 style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/172.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product04.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/172.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".4s"
                 style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/171.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/k2.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/171.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".6s"
                 style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/170.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/k3.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/170.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".8s"
                 style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/169.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product01.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/169.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".2s"
                 style="visibility: hidden; animation-delay: 0.2s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/168.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product03.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/168.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".4s"
                 style="visibility: hidden; animation-delay: 0.4s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/167.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/Product04.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/167.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".6s"
                 style="visibility: hidden; animation-delay: 0.6s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/166.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/k2.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/166.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 pro_list wow fadeInUp" data-wow-delay=".8s"
                 style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
-                <div class="pro_img"><a href="http://k180.lvweb.cn/Products1/165.html" title="泵吸式可燃气体检测仪"><img
+                <div class="pro_img"><a href="./productDetail.html" title="泵吸式可燃气体检测仪"><img
                       src="./images/k3.JPG" alt="泵吸式可燃气体检测仪"></a></div>
-                <div class="pro_title"><a href="http://k180.lvweb.cn/Products1/165.html"
+                <div class="pro_title"><a href="./productDetail.html"
                     title="泵吸式可燃气体检测仪">泵吸式可燃气体检测仪</a></div>
               </div>
             </div>
