--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
 								<li>
 									<div class="pro_item">
 										<a href="./productDetail.html">
-											<div class="pro_img"><img src="./images/K2.jpg"></div>
+											<div class="pro_img"><img src="./images/k2.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
 									<div class="pro_item">
 										<a href="./productDetail.html">
-											<div class="pro_img"><img src="./images/K3.jpg"></div>
+											<div class="pro_img"><img src="./images/k3.jpg"></div>
 											<div class="pro_title">固定式可燃气体检测仪 </div>
 										</a>
 									</div>
@@ -217,7 +217,7 @@
 									</div>
 									<div class="pro_item">
 										<a href="./productDetail.html">
-											<div class="pro_img"><img src="./images/K2.jpg"></div>
+											<div class="pro_img"><img src="./images/k2.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
@@ -225,7 +225,7 @@
 								<li>
 									<div class="pro_item">
 										<a href="./productDetail.html">
-											<div class="pro_img"><img src="./images/K3.jpg"></div>
+											<div class="pro_img"><img src="./images/k3.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
@@ -255,13 +255,13 @@
 								<li>
 									<div class="pro_item">
 										<a href="./productDetail.html">
-											<div class="pro_img"><img src="./images/K2.jpg"></div>
+											<div class="pro_img"><img src="./images/k2.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
 									<div class="pro_item">
 										<a href="./productDetail.html">
-											<div class="pro_img"><img src="./images/K3.jpg"></div>
+											<div class="pro_img"><img src="./images/k3.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
@@ -289,7 +289,7 @@
 									</div>
 									<div class="pro_item">
 										<a href="./productDetail.html">
-											<div class="pro_img"><img src="./images/K2.jpg"></div>
+											<div class="pro_img"><img src="./images/k2.jpg"></div>
 											<div class="pro_title">泵吸式可燃气体检测仪</div>
 										</a>
 									</div>
