--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 	<link href="./css/animate.min.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript" src="./js/wow.min.js"></script>
 	<!--<![endif]-->
+	<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?477b406cbd5b2712e6ab2f70d472eb3f";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 
 <body>
